--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" d/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="author" content="Justin Praßl" />
+    <meta name="description" content="A messenger written in React" />
     <title>React Messenger</title>
+    <link rel="icon" href="%PUBLIC_URL%/img/logo_c.png" type="image/png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo_c.png" type="image/png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" integrity="sha384-9/D4ECZvKMVEJ9Bhr3ZnUAF+Ahlagp1cyPC7h5yDlZdXs4DQ/vRftzfd+2uFUuqS" crossorigin="anonymous"></script>
   </head>
   <body>
